[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "attica"
version = "0.0.1"
dependencies = [
    "polars",
    "python-dateutil",
    "tqdm",
    "xlsx2csv",
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "python-dotenv>=1.2.1",
    "fastexcel>=0.18.0",
]

[tool.setuptools]
packages = [
    "all_dataframes",
    "app",
    "data",
    "data_source",
    "dataframe",
    "type_casting",
    "utils",
]

[dependency-groups]
dev = [
    "ty>=0.0.10",
]
