[project]
name = "invoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.19.0",
    "marimo>=0.20.4",
    "polars>=1.38.1",
    "polars-result>=0.2.0",
    "python-dateutil>=2.9.0.post0",
    "pyzmq>=27.1.0",
    "read-google-sheet",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.10",
]
